[package]
name = "gymnarium_application"
version = "0.1.0"

description = "Application making all the Gymnarium framework structures available through a cli interface."
keywords = ["gym", "reinforcement", "learning"]

repository = "https://github.com/tiquthon/gymnarium_application"
authors = ["Thimo Neumann <tiquthon@gmail.com>"]

edition = "2018"
license = "MIT"

[dependencies]
clap = "2.33.3"
gymnarium = { path = "../gymnarium" }
